--- a/content/database/1.md
+++ b/content/database/1.md
@@ -59,3 +59,25 @@ SELECT /*+ INDEX(A 고객_PK) */
 라이브러리 캐시? SQL 파싱, 최적화, 로우 소스 생성을 거쳐 생성한 내부 프로시저를 반복 재사용할 수 있또록 캐싱하는 메모리 공간  
 라이브러리 캐시는 SGA 구성요소  
 SGA? 서버 프로세스와 백그라운드 프로세스가 공통으로 액세스하는 데이터와 제어 구조를 캐싱하는 메모리 공간  
+
+### **1.3 데이터 저장 구조 및 I/O 메커니즘**
+I/O 튜닝 = SQL 튜닝  
+I/O = 잠(SLEEP) -> OS 또는 I/O 서브시스템이 I/O 처리하는 동안 프로세스는 잠을 잠  
+프로세스(process) = 실행중인 프로그램  
+실행중인 프로세스는 interrupt에 의해 수시로 실행 준비 상태로 전환 됐다가 다시 실행 상태로 전환
+
+**1.3.2 데이터베이스 저장 구조**
+테이블스페이스>세그먼트>익스텐트>블록=로우  
+세그먼트 = 테이블, 인덱스 (저장 공간이 필요한 오브젝트)  
+익스텐트 = 공간을 확장하는 단위. 데이터를 입력하다 공간이 부족해지면 테이블 스페이스로부터 익스텐트로 추가로 할당 받음  
+연속된 블록들의 집합  
+데이터 블록 = 레코드 (DB@, SQL Server 의 경우 블록 대신 페이지라고 부름)
+한 블록은 하나의 테이블이 독점. 한 블록에 저장된 레코드는 모두 같은 테이블 레코드.  
+
+블록 : 데이터를 읽고 쓰는 단위
+익스텐트 : 공간을 확장하는 단위. 연속된 블록 집합
+세그먼트 : 데이터 저장공간이 필요한 오브젝트(테이블, 인덱스, 파티션, LOB)
+테이블스페이스 : 세그먼트를 담는 콘테이너
+데이터파일 : 디스크 상의 물리적인 OS 파일
+
+**1.3.3 블록 단위 I/O**
