--- a/content/posts/5.md
+++ b/content/posts/5.md
@@ -1,13 +1,17 @@
 ---
-title: "Django drf ViewSet perform_, VS serializer save ??"
+title: "Django perform_create, perform_update, save"  
 date: 2021-03-04T00:00:00+00:00
 description: "create, update 실행 전,후 추가 작업이 필요할 때?"
 tags: ["Django","postgresql","hj_quiz"]
 ---
 
 ### **목적**
-create, update 동작 시  추가 작업을 하고 싶다면?  
-예시) 게시글 작성 시 작성자에 자동으로 로그인 유저를 추가하고 싶어요!  
--> perform_create 를 커스터마이징 한다.  
+rest api 로 post, put patch 등의 작업 후 추가로 작업을 하고 싶다면?    
+예시) 사용자가 게시글 작성시 자동으로 안내 댓글을 남기도록 함  
+
+perform_create(), perform_update() 혹은 save() 함수를 커스터마이징 할 수 있다.  
+create, update 등 특정 동작에서만 동작해야할 때는 perform_create, perform_update를 사용하고  
+create, update 둘 다 작동 해야할 때는 save 함수에 추가로 코드를 작성하였다.  
+
 
 참고 URL : https://stackoverflow.com/questions/35283426/how-do-i-use-perform-create-to-set-a-field-automatically-in-django-rest-framewor
